switch to dvh for reveal.js height, fixes issue with presentations not covering fullviewport in ios

--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -18,7 +18,7 @@ html.reveal-full-page {
 	height: 100%;
 	height: 100vh;
 	height: calc( var(--vh, 1vh) * 100 );
-	height: 100svh;
+	height: 100dvh;
 	overflow: hidden;
 }
 
